duck/test/fail/unify.duck
import base

_ = case True of
  True -> 1
  False -> 'a'
